--- a/src/main/webapp/index.jspx
+++ b/src/main/webapp/index.jspx
@@ -23,6 +23,7 @@ body { font-family: sans-serif; }
 <div id="content">
   <h1>tacticalmediafiles.net</h1>
   <a href="${mm:link('/mmbase/')}">MMBase</a>
+  - <a href="home.jspx">home</a>
   - <a href="list.jspx">list</a>
   - <a href="article.jsp?objectnumber=38519">about</a>
   
