--- a/src/main/webapp/style/css/tmf2.css
+++ b/src/main/webapp/style/css/tmf2.css
@@ -4,8 +4,11 @@
 * @since    July 2014
 */
 
+p.Text {
+    line-height: 1.6em;
+}
 
-/* ######## video ###### */
+/* ######## new video ###### */
 
 div.VideoTMFLogo
 {
